initial update of login page with db

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Football Club Management</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     Hello world.fgdasdfgagadgagagads
