--- a/login.html
+++ b/login.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Football Club Management</title>
     <link href="css/login_style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div>
-      <h3>LOG IN TO MY PLACE</h3>
-    </div>
+         <form action="login.php" method="post">
+      <h2>LOGIN</h2>
+      <?php if (isset($_GET['error'])) { ?>
+        <p class="error"><?php echo $_GET['error']; ?></p>
+      <?php } ?>
+      <label>User Name</label>
+      <input type="text" name="uname" placeholder="User Name"><br>
 
+      <label>User Name</label>
+      <input type="password" name="password" placeholder="Password"><br>
 
-
-
+      <button type="submit">Login</button>
+     </form>
 
     <script src="script.js"></script>
   </body>
