few update about php conn

--- a/login.html
+++ b/login.html
@@ -12,13 +12,13 @@
       <?php if (isset($_GET['error'])) { ?>
         <p class="error"><?php echo $_GET['error']; ?></p>
       <?php } ?>
-      <label>User Name</label>
-      <input type="text" name="uname" placeholder="User Name"><br>
+      <label class="label-form">User Name</label>
+      <input class="input-form" type="text" name="uname" placeholder="User Name"><br>
 
-      <label>User Name</label>
-      <input type="password" name="password" placeholder="Password"><br>
+      <label class="label-form">User Name</label>
+      <input class="input-form" type="password" name="password" placeholder="Password"><br>
 
-      <button type="submit">Login</button>
+      <button class="button-log" type="submit">Login</button>
      </form>
 
     <script src="script.js"></script>
