--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world.fgdasdfgagadgagagads
-
+    Hello world.
     <!-- <form method="POST" action="login.html">
       <input type="submit" value="LOGIN"/>
      </form>
