login button design update in login page

--- a/login.html
+++ b/login.html
@@ -8,7 +8,10 @@
   </head>
   <body class="body-log">
          <form action="login.php" method="post">
-      <h2 class="title-log">LOGIN</h2>
+      <h2 class="title-log">LOG IN TO MY PLACE</h2>
+      <div>
+        <h4 class="sub-log"> Don't have an account? <a href="signup.html">Sign for place</a></h4>
+      </div>
       <?php if (isset($_GET['error'])) { ?>
         <p class="error"><?php echo $_GET['error']; ?></p>
       <?php } ?>
