half final update of login page design

--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
   </head>
   <body class="body-log">
          <form action="login.php" method="post">
-      <h2 class="title-log">LOG IN TO MY PLACE</h2>
+      <h2 class="title-log">LOG IN TO MY UNITED</h2>
       <div>
-        <h4 class="sub-log"> Don't have an account? <a href="signup.html">Sign for place</a></h4>
+        <h4 class="sub-log"> Don't have an account? <a href="signup.html">Sign for United</a></h4>
       </div>
       <?php if (isset($_GET['error'])) { ?>
         <p class="error"><?php echo $_GET['error']; ?></p>
@@ -21,7 +21,7 @@
       <label class="label-form">Password</label>
       <input class="input-form" type="password" name="password" placeholder="Password"><br>
 
-      <button class="button-log" type="submit">Login</button>
+        <button class="button-log" type="submit">Login</button>  
      </form>
 
     <script src="script.js"></script>
