final half design update login & signup

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <button class="button" onclick="location.href = 'login.html'">LOG IN</button>
     </div>
 
+    <div>
+      <button class="button" onclick="location.href = 'signup.html'">SIGN UP</button>
+    </div>
+
 
     <script src="script.js"></script>
   </body>
