update for index page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div>
-      <button class="button" onclick="location.href = 'signup.html'">SIGN UP</button>
+      <button class="button" onclick="location.href = 'signup.php'">SIGN UP</button>
     </div>
 
 
