minor project update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      </form>
       -->
      <div>
-      <button class="button" onclick="location.href = 'login.html'">LOG IN</button>
+      <button class="button" onclick="location.href = 'login.php'">LOG IN</button>
     </div>
 
     <div>
