navbar update of inedx page

--- a/index.html
+++ b/index.html
@@ -3,23 +3,39 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Football Club Management</title>
+    <title>Manchester United</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   </head>
   <body>
-    Hello world.
+    <!-- Hello world. -->
     <!-- <form method="POST" action="login.html">
       <input type="submit" value="LOGIN"/>
      </form>
       -->
-     <div>
+<!--      <div>
       <button class="button" onclick="location.href = 'login.php'">LOG IN</button>
     </div>
 
     <div>
       <button class="button" onclick="location.href = 'signup.php'">SIGN UP</button>
     </div>
+ -->
 
+    <div>
+      <nav>
+        <ul>
+          <li><b><a href="index.php">HOME</a></b></li>
+          <li><b><a href="R_servicerequest.php">PLAYERS</a></b></li>
+          <li><b><a href="S.M_mechaniclogin.php">CLUB STAFF</a></b></li>
+          <li><b><a href="S.M_userlogin.php">BOARD MEMBERS</a></b></li>
+          <li><b><a href="S.M_adminlogin.php">CLUB SHOP</a></b></li>
+
+        </ul>
+      </nav>
+    </div>
 
     <script src="script.js"></script>
   </body>
